alignment fix

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ section {
 }
 
 .container {
-  width: 70%;
+  width: 66%;
   max-width: 1200px;
   min-width: 320px;
   margin: 0 auto;
@@ -66,7 +66,8 @@ font-size: 2rem;
 }
 
 .main-grid {
-  width: 70%;
+  padding-left: 1rem;
+  width: 66%;
   margin: 0 auto;
   display: grid;
   gap: 1rem;
@@ -164,7 +165,7 @@ footer {
 }
 
 footer div {
-  width: 70%;
+  width: 66%;
   margin: 0 auto;
   color: #fff;
   text-align: right;
